Logo and footer done

--- a/src/sections/Top.astro
+++ b/src/sections/Top.astro
@@ -1,8 +1,10 @@
 ---
-import FincaLogo from '../components/FincaLogo.astro';
+import FincaLogo from "../components/FincaLogo.astro";
 ---
 
-<section>
-    <Span> 404 </Span>
-    <FincaLogo />
+<section class="flex flex-col justify-center items-center">
+  <span class="text-xl uppercase text-white bg-black px-6 py-1 mb-9 font-medium"
+    >Finca</span
+  >
+  <FincaLogo />
 </section>
