Sections of body done

--- a/src/sections/Main.astro
+++ b/src/sections/Main.astro
@@ -1,3 +1,21 @@
 ---
 
 ---
+
+<section
+  class="mt-32 mx-auto flex flex-col justify-center items-center text-center"
+>
+  <h2 class="uppercase text-5xl font-semibold">App para gestionar fincas</h2>
+
+  <h3 class="uppercase text-2xl font-medium text-center max-w-sm mt-6">
+    <span>Escribenos para garantizar acceso</span>
+  </h3>
+
+  <a
+    class="border-black border-2 font-medium uppercase text-lg px-4 py-1 mt-8 hover:bg-gray-50 hover:scale-125"
+    href=""
+    target="_blank"
+    rel="noopener noreferrer"
+    >Click Aqui!!
+  </a>
+</section>
