--- a/src/sections/Body.astro
+++ b/src/sections/Body.astro
@@ -1,3 +1,23 @@
 ---
 
 ---
+
+<section class="flex font-medium gap-y-10 my-32 flex-col">
+  <div class="flex justify-center items-center">
+    <a href="" target="_blank" rel="noopener noreferrer"
+      ><!-- Link al IG de la empresa -->
+      <img src="" alt="" />
+    </a>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-3 uppercase text-center gap-x-4">
+    <article class="py-28 px-10 border-y-2">
+      <h5>Content 1</h5>
+    </article>
+    <article class="py-28 px-10 border-y-2">
+      <h4>Content 2</h4>
+    </article>
+    <article class="py-28 px-10 border-y-2">
+      <h5>Content 3</h5>
+    </article>
+  </div>
+</section>
