info section done, pending to develop the form section

--- a/src/sections/Body.astro
+++ b/src/sections/Body.astro
@@ -4,20 +4,40 @@
 
 <section class="flex font-medium gap-y-10 my-32 flex-col">
   <div class="flex justify-center items-center">
-    <a href="" target="_blank" rel="noopener noreferrer"
-      ><!-- Link al IG de la empresa -->
-      <img src="" alt="" />
+    <a
+      href="https://www.google.com/"
+      target="_blank"
+      rel="noopener noreferrer"
+      class="hover:scale-125 hover:opacity-70 transition inline-block"
+    >
+      <img src="../../public/middleLogo.svg" />
     </a>
   </div>
   <div class="grid grid-cols-1 md:grid-cols-3 uppercase text-center gap-x-4">
-    <article class="py-28 px-10 border-y-2">
-      <h5>Content 1</h5>
+    <article
+      class="md:order-none flex justify-center items-center text-xl py-28 px-16 border-y-2"
+    >
+      <h5>Content 2</h5>
     </article>
-    <article class="py-28 px-10 border-y-2">
-      <h4>Content 2</h4>
+    <article
+      class="md:order-none flex justify-center items-center text-4xl py-28 px-16 border-y-2"
+    >
+      <h4>
+        <a
+          class="hover:text-white transitio hover:scale-110 inline-block"
+          href=""
+          target="_blank"
+          rel="noopener noreferrer"
+          ><!-- Link -->
+          <img src="" alt="" />
+          Primary Content</a
+        >
+      </h4>
     </article>
-    <article class="py-28 px-10 border-y-2">
-      <h5>Content 3</h5>
+    <article
+      class="md:order-none flex justify-center items-center text-xl py-28 px-16 border-y-2"
+    >
+      <h5>Content 2</h5>
     </article>
   </div>
 </section>
