--- a/src/sections/Main.astro
+++ b/src/sections/Main.astro
@@ -12,7 +12,7 @@
   </h3>
 
   <a
-    class="border-black border-2 font-medium uppercase text-lg px-4 py-1 mt-8 hover:bg-gray-50 hover:scale-125"
+    class="border-black border-2 font-medium uppercase text-lg px-4 py-1 mt-8 hover:bg-gray-50 hover:scale-125 transition inline-block"
     href=""
     target="_blank"
     rel="noopener noreferrer"
