--- a/src/sections/Info.astro
+++ b/src/sections/Info.astro
@@ -1,5 +1,9 @@
 ---
-
+import FincaLogo from "../components/FincaLogo.astro";
 ---
 
-<section>3</section>
+<section class="my-32 flex flex-col gap-y-10 justify-center items-center">
+    <FincaLogo />
+    <!-- Contact form to de developed -->
+</section>
+
