--- a/src/sections/Top.astro
+++ b/src/sections/Top.astro
@@ -6,5 +6,5 @@ import FincaLogo from "../components/FincaLogo.astro";
   <span class="text-xl uppercase text-white bg-black px-6 py-1 mb-9 font-medium"
     >Finca</span
   >
-  <FincaLogo />
+  <FincaLogo class="w-full h-auto md:w-[800px]" />
 </section>
